--- a/package.json
+++ b/package.json
@@ -15,16 +15,15 @@
     "antd": "^5.17.0",
     "graphql-tag": "^2.12.6",
     "graphql-ws": "^5.9.1",
-    "prettier": "^3.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^7.0.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.0",
-    "@graphql-codegen/import-types-preset": "^3.0.0",
-    "@graphql-codegen/typescript": "^4.0.1",
-    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/cli": "5.0.7",
+    "@graphql-codegen/import-types-preset": "^3.0.1",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-operations": "^4.6.1",
     "@types/node": "^18.16.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -34,15 +33,18 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.4.2",
-    "vite": "^4.3.1"
+    "prettier": "^3.6.2",
+    "typescript": "^5.8.3",
+    "vite": "^4.3.1",
+    "vite-tsconfig-paths": "^5.1.4",
+    "@graphql-codegen/client-preset": "4.8.3"
   },
   "scripts": {
     "dev": "refine dev",
     "build": "tsc && refine build",
     "start": "refine start",
     "refine": "refine",
-    "codegen": "graphql-codegen"
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "browserslist": {
     "production": [
