--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "build": "tsc && refine build",
     "start": "refine start",
     "refine": "refine",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen"
   },
   "browserslist": {
     "production": [
